Extend templates for fluentd 0.14 new sections
- extend source to support format and parse section
- extend match to support buffers with chunk keys
- update readme

--- a/templates/source.erb
+++ b/templates/source.erb
@@ -1,5 +1,13 @@
 <source>
 <% @config.each do |key, val| -%>
+  <%- if val.is_a?( Hash ) -%>
+  <<%= key -%>>
+  <%- val.each do |key, val| -%>
+    <%= key -%> <%= val %>
+  <%- end -%>
+  </<%= key %>>
+  <%- else -%>
   <%= key -%> <%= val %>
+  <%- end -%>
 <% end -%>
 </source>
