--- a/templates/source.erb
+++ b/templates/source.erb
@@ -1,5 +1,13 @@
 <source>
 <% @config.each do |key, val| -%>
+  <%- if val.is_a?( Hash ) -%>
+  <<%= key -%>>
+  <%- val.each do |key2, val2| -%>
+    <%= key2 -%> <%= val2 %>
+  <%- end -%>
+  </<%= key %>>
+  <%- else -%>
   <%= key -%> <%= val %>
+  <%- end -%>
 <% end -%>
 </source>
